@@ -1,7 +1,13 @@
+2002-06-03 Lieven Vanholme <Lieven.Vanholme@rug.ac.be>
+
+	* generalslab.h: Support for expanding arbitrary functions in
+                         eigenmodes.
+	* generalslab.cpp: Ditto.
+
 2002-05-09 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* generalslab.h: Add get_imag_start_thickness.
-	* generalslab.cpp: Fix SlabFlux for PML case..
+	* generalslab.cpp: Fix SlabFlux for PML case.
 
 2002-03-18 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
