@@ -1,3 +1,7 @@
+2002-06-03  Lieven Vanholme <Lieven.Vanholme@rug.ac.be>
+
+	* camfr_wrap.cpp: Support for arbitrary excitations.
+
 2002-05-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* infstack.cpp: Only warn when power flow is non-zero.
